removed favicon from title bar

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Page Title -->
-    <title>Wexim</title>
+    <title>A.S. Toolbox</title>
     <!-- Favicon -->
-    <link rel="icon" href="images/favicon.ico">
+    <!-- <link rel="icon" href="images/favicon.ico"> -->
     <!-- Animate -->
     <link rel="stylesheet" href="css/animate.min.css">
     <!-- Bootstrap CSS -->
