didn't really do much

--- a/index.html
+++ b/index.html
@@ -293,6 +293,34 @@
     <img id="foot-hurting" src="images/foot_hurts.png">
     <div id="foot-text">Foot</div>
 </div>
+
+<div id="my-needs">
+    <img id="needs-btn" src="images/button.png">
+</div>
+<div id="i-need-my">I Need</div>
+<!-- <ul id="placeholder">
+    <li>Help</li>
+    <li>Headphones</li>
+    <li>Movement Break</li>
+    <li>Calm Corner</li>
+    <li>Timer</li>
+    <li>Material ex. pencil</li>
+</ul> -->
+<!-- <div id="social">
+    <span style="font-weight: bold;">Personalized Social Stories:</span>
+    <br>
+    <br>
+    User uploads their photo, and photos of the other people in their lives that are part of the social stories (i.e. parent/guardian, siblings, teacher, etc)
+    to strengthen the social story narratives.
+</div>
+<div id="schedule">Personalized Visual Schedule</div>
+<div id="prize">
+    <span style="font-weight: bold;">Personalized Reward Center:</span>
+    <br>
+    <br>
+    User can choose from preloaded pictures and/or take pictures of the items they receive as rewards/incentives and can add them to their "prize bin" as they earn through out the day.
+</div> -->
+
 <!-- <script>
     function feelingsTitle(){
         document.getElementById('i-feel').style.display="block";
@@ -322,6 +350,8 @@
         document.getElementById('emotion4').style.display="flex";
         document.getElementById('emotion5').style.display="flex";
         document.getElementById('emotion6').style.display="flex";
+        document.getElementById('body-feels').style.display="none";
+        document.getElementById('i-need-my').style.display="none";
         document.getElementById("i-need1").style.display="none";
         document.getElementById("i-need3").style.display="none";
         document.getElementById("i-need4").style.display="none";
@@ -351,6 +381,8 @@
         document.getElementById('emotion4').style.display="none";
         document.getElementById('emotion5').style.display="none";
         document.getElementById('emotion6').style.display="none";
+        document.getElementById('body-feels').style.display="block";
+        document.getElementById('i-need-my').style.display="block";
     }
 </script>
 <script>
@@ -367,6 +399,8 @@
         document.getElementById('emotion5').style.display="none";
         document.getElementById('emotion6').style.display="none";
         document.getElementById("hurts").style.display="block";
+        document.getElementById('i-need-my').style.display="none";
+        document.getElementById('i-feel').style.display="none";
     }
 </script>
 <script>
@@ -391,6 +425,8 @@
         document.getElementById('leg-hurts').style.display="none";
         document.getElementById('hand-hurts').style.display="none";
         document.getElementById('foot-hurts').style.display="none";
+        document.getElementById('i-need-my').style.display="block";
+        document.getElementById('i-feel').style.display="block";
     }
 </script>
 <script>
