finished i need boxes

--- a/index.html
+++ b/index.html
@@ -318,12 +318,25 @@
         <div id="tool4-text">Timer</div>
     </div>
 </div>
-<!-- <div id="tool5">
+<div id="tool5">
     <div id="tool5-inner">
         <img id="tool5-pic" src="images/choices.png">
         <div id="tool5-text">Choices</div>
     </div>
-</div> -->
+</div>
+<div id="tool6">
+    <div id="tool6-inner">
+        <img id="tool6-pic" src="images/movement.png">
+        <div id="tool6-text">Move Break</div>
+    </div>
+</div>
+<div id="tool7">
+    <div id="tool7-inner">
+        <img id="tool7-pic" src="images/calm-corner.png">
+        <div id="tool7-text">Calm Corner</div>
+    </div>
+</div>
+
 
 <!-- Self Regulation Needs End -->
 
@@ -565,43 +578,49 @@
     var tool2 = document.getElementById('tool2');
     var tool3 = document.getElementById('tool3');
     var tool4 = document.getElementById('tool4');
+    var tool5 = document.getElementById('tool5');
+    var tool6 = document.getElementById('tool6');
+    var tool7 = document.getElementById('tool7');
     var choice = document.getElementById('choice');
-    var emotion = document.getElementById('emotion');
-    var emotion2 = document.getElementById('emotion2');
-    var emotion3 = document.getElementById('emotion3');
-    var emotion4 = document.getElementById('emotion4');
-    var emotion5 = document.getElementById('emotion5');
-    var emotion6 = document.getElementById('emotion6');
-    var need1= document.getElementById('i-need1');
-    var need3 = document.getElementById('i-need3');
-    var need4 = document.getElementById('i-need4');
-    var need5 = document.getElementById('i-need5');
-    var hurts = document.getElementById('hurts');
+    // var emotion = document.getElementById('emotion');
+    // var emotion2 = document.getElementById('emotion2');
+    // var emotion3 = document.getElementById('emotion3');
+    // var emotion4 = document.getElementById('emotion4');
+    // var emotion5 = document.getElementById('emotion5');
+    // var emotion6 = document.getElementById('emotion6');
+    // var need1= document.getElementById('i-need1');
+    // var need3 = document.getElementById('i-need3');
+    // var need4 = document.getElementById('i-need4');
+    // var need5 = document.getElementById('i-need5');
+    // var hurts = document.getElementById('hurts');
     var needTitle = document.getElementById('i-need-my');
     var ifeel = document.getElementById('i-feel');
     var bodyfeels = document.getElementById('body-feels');
-    var sick1 = document.getElementById('sick1');
-    var sick2 = document.getElementById('sick2');
-    var sick3 = document.getElementById('sick3');
-    var sick4 = document.getElementById('sick4');
-    var sick5 = document.getElementById('sick5');
-    var sick6 = document.getElementById('sick6');
+    // var sick1 = document.getElementById('sick1');
+    // var sick2 = document.getElementById('sick2');
+    // var sick3 = document.getElementById('sick3');
+    // var sick4 = document.getElementById('sick4');
+    // var sick5 = document.getElementById('sick5');
+    // var sick6 = document.getElementById('sick6');
 
-    var head = document.getElementById('head-hurts')
-    var neck = document.getElementById('neck-hurts')
-    var back = document.getElementById('back-hurts')
-    var tummy = document.getElementById('tummy-hurts')
+    // var head = document.getElementById('head-hurts')
+    // var neck = document.getElementById('neck-hurts')
+    // var back = document.getElementById('back-hurts')
+    // var tummy = document.getElementById('tummy-hurts')
 
-    var arm = document.getElementById('arm-hurts')
-    var leg = document.getElementById('leg-hurts')
-    var hand = document.getElementById('hand-hurts')
-    var foot = document.getElementById('foot-hurts')
+    // var arm = document.getElementById('arm-hurts')
+    // var leg = document.getElementById('leg-hurts')
+    // var hand = document.getElementById('hand-hurts')
+    // var foot = document.getElementById('foot-hurts')
 
     if (checkBox.checked == true){
       tool1.style.display = "flex";
       tool2.style.display = "flex";
       tool3.style.display = "flex";
       tool4.style.display = "flex";
+      tool5.style.display = "flex";
+      tool6.style.display = "flex";
+      tool7.style.display = "flex";
     //   emotion.style.display= "none";
     //   emotion2.style.display= "none";
     //   emotion3.style.display= "none";
@@ -639,6 +658,9 @@
       tool2.style.display = "none";
       tool3.style.display = "none";
       tool4.style.display = "none";
+      tool5.style.display = "none";
+      tool6.style.display = "none";
+      tool7.style.display = "none";
     //   emotion2.style.display= "none";
     //   emotion3.style.display= "none";
     //   emotion4.style.display= "none";
