added social story image and visual schedule image

--- a/index.html
+++ b/index.html
@@ -1011,8 +1011,8 @@
                          data-paddingtop="[0,0,0,0]"
                          data-paddingright="[0,0,0,0]"
                          data-paddingbottom="[0,0,0,0]"
-                         data-paddingleft="[0,0,0,0]"
-                         style="z-index: 5;border-width:0px;"><img src="images/top_left.png" alt="" data-ww="['650px','650px','650px','650px']" data-hh="['500px','500px','500px','500px']" width="650" height="500" data-no-retina> </div>
+                         data-paddingleft="[100,100,100,100]"
+                         style="z-index: 5;border-width:0px;"><img src="images/social-story.png" alt="" data-ww="['650px','650px','650px','650px']" data-hh="['500px','500px','500px','500px']" width="650" height="500" data-no-retina> </div>
 
                     <!-- layer nr. 2 -->
                     <div class="tp-caption tp-resizeme rs-parallaxlevel-15"
@@ -1050,7 +1050,7 @@
                          data-paddingright="[0,0,0,0]"
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
-                         style="z-index: 7;border-width:0px;"><img src="images/papers.png" alt="" data-ww="['900px','900px','900px','900px']" data-hh="['1000px','1000px','1000px','1000px']" width="900" height="1000" data-no-retina> </div>
+                         style="z-index: 7;border-width:0px;"><img src="images/schedule.png" alt="" data-ww="['900px','900px','900px','900px']" data-hh="['1000px','1000px','1000px','1000px']" width="900" height="1000" data-no-retina> </div>
 
                     <!-- layer nr. 4 -->
                     <div class="tp-caption tp-resizeme rs-parallaxlevel-12"
