--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
                          data-paddingright="[0,0,0,0]"
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
-                         style="z-index: 6;border-width:0px;"><img src="images/top_right.png" alt="" data-ww="['550px','550px','550px','550px']" data-hh="['471px','471px','471px','471px']" width="550" height="471" data-no-retina> </div>
+                         style="z-index: 6;border-width:0px;"><img src="images/dry-erase.png" alt="" data-ww="['550px','550px','550px','550px']" data-hh="['471px','471px','471px','471px']" width="550" height="471" data-no-retina> </div>
 
                     <!-- layer nr. 3 -->
                     <div class="tp-caption tp-resizeme rs-parallaxlevel-10"
